5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_2711.log
== SUBMITION (2019-04-11 19:00:19) 
-- CODE:
valor=float(input("digite o valor"))
qticketsRU=float(input("digite o numero"))
valordosticket=float(input("digite o numero"))
qdepasses=float(input("digite o numero"))
valordopasse=float(input("digite o numero"))
mensagem=(qticketsRU*valordostichet)+(qdepasses*valordopasse)
if (valor>=mensagem):
	msm="SUFICIENTE"
else:
	msm="INSUFICIENTE"
print(msm)
-- EXECUTION TIME:
0.166995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2711/main.py", line 6, in <module>
    mensagem=(qticketsRU*valordostichet)+(qdepasses*valordopasse)
NameError: name 'valordostichet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:00:23) 
-- CODE:
valor=float(input("digite o valor"))
qticketsRU=float(input("digite o numero"))
valordosticket=float(input("digite o numero"))
qdepasses=float(input("digite o numero"))
valordopasse=float(input("digite o numero"))
mensagem=(qticketsRU*valordostichet)+(qdepasses*valordopasse)
if (valor>=mensagem):
	msm="SUFICIENTE"
else:
	msm="INSUFICIENTE"
print(msm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem=(qticketsRU*valordostichet)+(qdepasses*valordopasse)
NameError: name 'valordostichet' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:01:21) 
-- CODE:
valor=float(input("digite o valor"))
qtickets=float(input("digite o numero"))
valordosticket=float(input("digite o numero"))
qdepasses=float(input("digite o numero"))
valordopasse=float(input("digite o numero"))
mensagem=(qtickets*valordostichet)+(qdepasses*valordopasse)
if (valor>=mensagem):
	msm="SUFICIENTE"
else:
	msm="INSUFICIENTE"
print(msm)
-- EXECUTION TIME:
0.151528
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2711/main.py", line 6, in <module>
    mensagem=(qtickets*valordostichet)+(qdepasses*valordopasse)
NameError: name 'valordostichet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:01:24) 
-- CODE:
valor=float(input("digite o valor"))
qtickets=float(input("digite o numero"))
valordosticket=float(input("digite o numero"))
qdepasses=float(input("digite o numero"))
valordopasse=float(input("digite o numero"))
mensagem=(qtickets*valordostichet)+(qdepasses*valordopasse)
if (valor>=mensagem):
	msm="SUFICIENTE"
else:
	msm="INSUFICIENTE"
print(msm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem=(qtickets*valordostichet)+(qdepasses*valordopasse)
NameError: name 'valordostichet' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:02:34) 
-- CODE:
valor=float(input("digite o valor"))
qtickets=float(input("digite o numero"))
valordosticket=float(input("digite o numero"))
qdepasses=float(input("digite o numero"))
valordopasse=float(input("digite o numero"))
mensagem=(qtickets*valordosticket)+(qdepasses*valordopasse)
if (valor>=mensagem):
	msm="SUFICIENTE"
else:
	msm="INSUFICIENTE"
print(msm)
-- EXECUTION TIME:
0.112936
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
